# m1-doc

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-13-m1-doc-p1.md
docs/superpowers/specs/: 2026-06-13-m1-doc-design.md
examples/: docs.yml
src/: diagram.rs  escape.rs  graph.rs  html.rs  json.rs  loader.rs  main.rs  markdown.rs  model.rs
tests/: cli.rs  corpus.rs  golden.rs
tests/fixtures/synthetic/: Project.m1prj
